create table cliente (
  id bigint generated by default as identity primary key,
  codigo varchar(20) unique,
  nome varchar(150) not null,
  cpf varchar(11) not null unique,
  email varchar(254) not null unique,
  genero varchar(40) not null,
  nascimento date not null,
  telefone_tipo varchar(20) not null,
  telefone_ddd varchar(2) not null,
  telefone_numero varchar(9) not null,
  senha_hash varchar(100) not null,
  ativo boolean not null default true,
  criado_em timestamp with time zone not null,
  atualizado_em timestamp with time zone not null
);
create table endereco (
  id bigint generated by default as identity primary key,
  cliente_id bigint not null references cliente(id),
  apelido varchar(60) not null, tipo_residencia varchar(40) not null,
  tipo_logradouro varchar(40) not null, logradouro varchar(160) not null,
  numero varchar(20) not null, bairro varchar(100) not null, cep varchar(8) not null,
  cidade varchar(100) not null, estado varchar(60) not null, pais varchar(60) not null,
  observacoes varchar(500), cobranca boolean not null, entrega boolean not null,
  preferencial_entrega boolean not null default false, ativo boolean not null default true
);
create table bandeira (id bigint generated by default as identity primary key, nome varchar(40) not null unique);
create table cartao (
  id bigint generated by default as identity primary key,
  cliente_id bigint not null references cliente(id), bandeira_id bigint not null references bandeira(id),
  titular varchar(150) not null, ultimos_quatro varchar(4) not null,
  preferencial boolean not null default false, ativo boolean not null default true
);
create table transacao_cliente (
  id bigint generated by default as identity primary key, cliente_id bigint not null references cliente(id),
  codigo varchar(40) not null unique, tipo varchar(30) not null, status varchar(30) not null,
  valor numeric(12,2) not null, ocorrida_em timestamp with time zone not null, detalhes varchar(500)
);
create table auditoria_cliente (
  id bigint generated by default as identity primary key, cliente_id bigint not null references cliente(id),
  ocorrida_em timestamp with time zone not null, ator varchar(80) not null,
  operacao varchar(50) not null, alteracoes varchar(4000) not null
);
insert into bandeira(nome) values ('Visa'), ('Mastercard'), ('Elo'), ('American Express');
